# boatrace-ai

./: .env.example  .gitignore  README.md  boatrace_gate.py  boatrace_oos.py  boatrace_winners.py  experiment.py  program.md  pyproject.toml
.github/workflows/: boatrace.yml
autoresearch/: log_20260323_100811.txt  log_20260323_102508.txt  log_20260607_020006.txt  log_20260614_020005.txt  log_20260621_020006.txt  log_20260628_020009.txt  log_20260705_020006.txt  log_20260712_020008.txt  log_20260719_020008.txt  results.jsonl
branding/: profile.md
docs/: ensemble-plan.md
docs/requirements/: article-quality-v2.md  note-quality-v3.md  note-quality-v4.md
docs/specs/: article-quality-v2.md  note-quality-v3.md  note-quality-v4.md
scripts/: evening.sh  morning.sh  setup.sh  weekly_train.sh
scripts/launchd/: com.boatrace.ai.evening.plist  com.boatrace.ai.morning.plist  com.boatrace.ai.weekly-train.plist
scripts/launchd_macmini/: com.boatrace.ai.evening.plist  com.boatrace.ai.morning.plist  com.boatrace.ai.weekly-train.plist
src/boatrace_ai/: __init__.py  cli.py  config.py
src/boatrace_ai/data/: client.py  constants.py  exhibition.py  models.py  odds.py
tasks/: competitive-analysis.md  note-com-seo-research.md  todo.md
tests/: conftest.py  test_article.py  test_backtest.py  test_bets.py  test_cli.py  test_cli_publish.py  test_client.py  test_config.py  test_database.py  test_display.py  test_engagement.py  test_engine.py  test_eyecatch.py  test_features.py  test_grader.py  test_ml_model.py  test_models.py  test_note_client.py  test_odds.py  test_prompts.py  test_roi.py  test_training.py  test_twitter.py
tests/fixtures/: programs_sample.json  results_sample.json
(+25 files in other folders)
