[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boatrace-ai"
version = "0.2.0"
description = "AI-powered boat race prediction system using Claude API"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "optuna>=3.0",
]
publish = [
    "playwright>=1.40",
    "google-genai>=1.0",
]
social = [
    "tweepy>=4.14",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
boatrace = "boatrace_ai.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/boatrace_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
